--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   db:
-      image: mysql
+      image: mysql:latest
       container_name: my-mysql
       restart: always
       environment:
@@ -12,25 +12,27 @@ services:
       volumes:
         - ./mysql-volume:/var/lib/mysql
 
-  backend:
-    build: "./Backend"
-    container_name: backend
-    restart: always
-    volumes:
-      - ./backend:/app
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
+  # backend:
+  #   build: "./Backend"
+  #   container_name: backend
+  #   restart: always
+  #   volumes:
+  #     - ./backend:/app
+  #   environment:
+  #     DATABASE_URL: ${DATABASE_URL}
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     - db
 
-  frontend:
-    build: "./Frontend"
-    container_name: frontend
-    restart: always
-    volumes:
-      - ./frontend:/app
-    ports:
-    - "4200:4200"
+  # frontend:
+  #   build: "./Frontend"
+  #   container_name: frontend
+  #   restart: always
+  #   volumes:
+  #     - ./frontend:/app
+  #   ports:
+  #   - "4200:4200"
 
 
     
